--- a/Aula15.2/index.html
+++ b/Aula15.2/index.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Micro+5&display=swap" rel="stylesheet">
     <style>
         body{
-            font-family: 'Chakra Petch' /*Micro 5*/
-        };
+            font-family: 'Chakra Petch'; /*Micro 5*/
+        }
         div{
             background-color: #4169E1;
             color: #DAA520;
