--- a/Aula15.2/Desafio_copy/index.html
+++ b/Aula15.2/Desafio_copy/index.html
@@ -24,7 +24,7 @@
     }
 
     body{
-      background-color: hsla(14, 45%, 36%, 0.575);
+      background-color: hsl(30, 18%, 87%);
       margin: 1;
       font-family: 'Outfit';
     }
@@ -44,7 +44,7 @@
     }
 
     .Cx_roxa{
-      background-color: hsla(332, 51%, 32%, 0.253);
+      background-color: hsl(330, 100%, 98%);
     }
 
     .tit{
@@ -74,7 +74,7 @@
     </p>
     <div class="Cx_roxa">
       <h4 class="tit" style="color: hsl(332, 51%, 32%);">Tempo de preparação</h4>
-      <ul style="color: hsl(332, 51%, 32%);">
+      <ul style="color: hsl(24, 5%, 18%);">
         <li>Total: Aproximadamente 10 minutos</li>
         <li>Preparação: 5 minutos</li>
         <li>Cozinhando: 5 minutos</li>
