--- a/Aula15.2/Desafio_copy/index.html
+++ b/Aula15.2/Desafio_copy/index.html
@@ -24,7 +24,7 @@
     }
 
     body{
-      background-color: hsl(30, 18%, 87%);
+      background-color: hsl(30, 54%, 90%);
       margin: 1;
       font-family: 'Outfit';
     }
@@ -35,6 +35,25 @@
       padding: 3%;
       border-radius: 30px;
       text-align: left;
+      line-height: 2em;
+    }
+
+    ul{
+      padding-bottom: 1em;
+      text-align: justify;
+    }
+
+    ol{
+      text-align: justify;
+    }
+
+    li::marker{
+      color: hsl(14, 45%, 36%);
+      font-weight: bold;
+    }
+
+    .roxo li::marker{
+      color: hsl(332, 51%, 32%);
     }
 
     .Geral img{
@@ -45,6 +64,11 @@
 
     .Cx_roxa{
       background-color: hsl(330, 100%, 98%);
+    }
+
+    .textoRoxo{
+      margin-left: 1em;
+      padding-top: 1em;
     }
 
     .tit{
@@ -60,6 +84,14 @@
 
     table, td{
       border-bottom: 1px solid hsl(30, 18%, 87%);
+      padding-right: 10em;
+      padding-left: 1em;
+    }
+
+    .secundario{
+      color: hsl(14, 45%, 36%);
+      font-weight: bold;
+
     }
   </style>
 </head>
@@ -73,8 +105,8 @@
       com perfeição, opcionalmente recheado com queijo, vegetais ou carnes de sua escolha.
     </p>
     <div class="Cx_roxa">
-      <h4 class="tit" style="color: hsl(332, 51%, 32%);">Tempo de preparação</h4>
-      <ul style="color: hsl(24, 5%, 18%);">
+      <h4 class="textoRoxo" style="color: hsl(332, 51%, 32%);">Tempo de preparação</h4>
+      <ul class="roxo" style="color: hsl(24, 5%, 18%);">
         <li>Total: Aproximadamente 10 minutos</li>
         <li>Preparação: 5 minutos</li>
         <li>Cozinhando: 5 minutos</li>
@@ -91,13 +123,12 @@
     <hr>
     <h2 class="tit">Instruções</h2>
     <ol>
-      <li>Bata os ovos: Numa tigela, bata os ovos com uma pitada de sal e pimenta até ficarem bem misturados.</li>
-      <li>Você pode adicionar uma colher de sopa de água ou leite para obter uma textura mais fofa.</li>
-      <li>Aqueça a panela: Coloque uma frigideira antiaderente em fogo médio e adicione manteiga ou óleo.</li>
-      <li>Cozinhe a omelete: Assim que a manteiga derreter e borbulhar, coloque os ovos. Incline a panela para garantir os ovos cobrem uniformemente a superfície.</li>
-      <li>Adicione recheios (opcional): Quando os ovos começarem a endurecer nas bordas, mas ainda estiverem um pouco escorrendo      no meio, polvilhe os recheios escolhidos sobre metade da omelete.</li>
-      <li>Dobre e sirva: Enquanto a omelete continua cozinhando, levante cuidadosamente uma das pontas e dobre-a sobre os recheios. Deixe cozinhar por mais um minuto e depois coloque-o em um prato.</li>
-      <li>Aproveite: Sirva quente, com mais sal e pimenta se necessário.</li>
+      <li><b>Bata os ovos</b>: Numa tigela, bata os ovos com uma pitada de sal e pimenta até ficarem bem misturados. Você pode adicionar uma colher de sopa de água ou leite para obter uma textura mais fofa.</li>
+      <li><b>Aqueça a panela</b>: Coloque uma frigideira antiaderente em fogo médio e adicione manteiga ou óleo.</li>
+      <li><b>Cozinhe a omelete</b>: Assim que a manteiga derreter e borbulhar, coloque os ovos. Incline a panela para garantir os ovos cobrem uniformemente a superfície.</li>
+      <li><b>Adicione recheios (opcional)</b>: Quando os ovos começarem a endurecer nas bordas, mas ainda estiverem um pouco escorrendo      no meio, polvilhe os recheios escolhidos sobre metade da omelete.</li>
+      <li><b>Dobre e sirva</b>: Enquanto a omelete continua cozinhando, levante cuidadosamente uma das pontas e dobre-a sobre os recheios. Deixe cozinhar por mais um minuto e depois coloque-o em um prato.</li>
+      <li><b>Aproveite</b>: Sirva quente, com mais sal e pimenta se necessário.</li>
     </ol>
     <hr>
     <h2 class="tit">Nutrição</h2>
@@ -105,19 +136,19 @@
     <table>
       <tr>
         <td>Calorias</td>
-        <td>277kcal</td>
+        <td class="secundario">277kcal</td>
       </tr>
       <tr>
         <td>Carboidratos</td>
-        <td>0g</td>
+        <td class="secundario">0g</td>
       </tr>
       <tr>
         <td>Proteínas</td>
-        <td>20g</td>
+        <td class="secundario">20g</td>
       </tr>
       <tr>
         <td>Gordura</td>
-        <td>22g</td>
+        <td class="secundario">22g</td>
       </tr>
     </table>
   </div>
