--- a/Aula04.04/landing-page/index.html
+++ b/Aula04.04/landing-page/index.html
@@ -11,43 +11,67 @@
       <button class="px-14 py-2 font-semibold rounded-full bg-stone-100 hover:bg-stone-200 hover:shadow-lg hover:shadow-stone-600/10" >Try It Free</button>
     </nav>
     <section class="pl-20 flex flex-nowrap">
-      <section class="pl-20 pr-10 max-w-lg">
-        <h1 class="text-4xl font-bold pr-20">Build The Community Your Fans Will Love</h1>
-        <p>
+      <section class="pl-6 pt-20 max-w-lg">
+        <h1 class="text-4xl font-bold ">Build The Community Your Fans Will Love</h1>
+        <p class="py-10">
           Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
         </p>
-        <button class="px-16 py-2 font-semibold rounded-full bg-pink-500 hover:bg-pink-400 text-white">Get Started For Free</button>
+        <button class="px-20 py-5 font-semibold rounded-full bg-pink-500 hover:bg-pink-400 text-white">Get Started For Free</button>
       </section>
-      <section class="pr-20 flex-grow-1">
+      <section class="scale-75 flex-grow-1">
         <img src="images/illustration-mockups.svg" alt="">
       </section>
   </section>
   </header>
-  //media ou screens no framework pra responsividade
-  Try It Free
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
-
-  Grow Together
-
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
+  <section class="pt-24 pb-56 px-32">
+    <section class="flex justify-between mb-20 rounded-lg shadow-lg">
+        <section class="flex-grow p-24">
+            <h1 class="text-2xl pb-5 font-semibold">Grow Together</h1>
+            <p class="text-stone-500 pr-20">Generate meaningful discussions with your audience and build a strong, loyal community. 
+              Think of the insightful conversations you miss out on with a feedback form.</p>
+        </section>
+        <img src="../landing-page/images/illustration-grow-together.svg" alt="Imagem 1" class="w-96 h-auto p-5">
+    </section>
+    <section class="flex justify-between mb-14 rounded-lg shadow-lg">
+        <img src="../landing-page/images/illustration-flowing-conversation.svg" alt="Imagem 2" class="w-96 h-auto p-5 pl-24">
+        <section class="flex-grow p-24 pl-36 pr-5">
+            <h1 class="text-2xl pb-5 font-semibold">Flowing Conversations</h1>
+            <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+              have just-in-time loading for a more natural flow.</p>
+        </section>
+    </section>
+    <section class="flex justify-between mb-14 rounded-lg shadow-lg">
+        <section class="flex-grow p-24">
+            <h1 class="text-2xl pb-5 font-semibold">Your Users</h1>
+            <p>It takes no time at all to integrate Huddle with your app's authentication solution. 
+              This means, once signed in to your app, your users can start chatting immediately.</p>
+        </section>
+        <img src="../landing-page/images/illustration-your-users.svg" alt="Imagem 3" class="w-96 h-auto p-5">
+    </section>
+  </section>
+  <section class="bg-cyan-950 py-10">
+    <img src="../landing-page/images/logo-branco.svg" alt="" class="">
+      <section class="flex justify-between">
+        <section class="flex-grow flex flex-col">
+          <p class="mb-4"><img src="../landing-page/images/icon-location.svg" alt=""></p>
+          <p class="mb-4"><img src="../landing-page/images/icon-phone.svg" alt=""></p>
+          <p><img src="../landing-page/images/icon-email.svg" alt=""></p>
+        </section>
+        <section class="flex-grow">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <p>+1-543-123-4567</p>
+          <p>example@huddle.com</p>
+        </section>
+        <section class="flex-grow">
+          <a class="" href="http://">About Us</a>
+          <a class="" href="http://">What We D</a>
+          <a class="" href="http://">FAQ</a>
+          <a class="" href="http://">Career</a>
+          <a class="" href="http://">Blog</a>
+          <a class="" href="http://">Contact Us</a>
+        </section>
+    </section>
+  </section>
   Ready To Build Your Community?
 
   Get Started For Free
