--- a/Aula04.04/landing-page/index.html
+++ b/Aula04.04/landing-page/index.html
@@ -50,25 +50,32 @@
     </section>
   </section>
   <section class="bg-cyan-950 py-10">
-    <img src="../landing-page/images/logo-branco.svg" alt="" class="">
+    <img src="../landing-page/images/logo-branco.svg" alt="" class="pl-24">
       <section class="flex justify-between">
-        <section class="flex-grow flex flex-col">
-          <p class="mb-4"><img src="../landing-page/images/icon-location.svg" alt=""></p>
-          <p class="mb-4"><img src="../landing-page/images/icon-phone.svg" alt=""></p>
+        <section class="flex-nowrap flex flex-col pl-24 mr-2">
+          <p class="mb-14 mt-1"><img src="../landing-page/images/icon-location.svg" alt=""></p>
+          <p class="mb-1"><img src="../landing-page/images/icon-phone.svg" alt=""></p>
           <p><img src="../landing-page/images/icon-email.svg" alt=""></p>
         </section>
-        <section class="flex-grow">
+        <section class="flex-wrap w-96 text-white mr-24">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
           <p>+1-543-123-4567</p>
           <p>example@huddle.com</p>
         </section>
-        <section class="flex-grow">
+        <section class="flex-nowrap w-24 text-white mr-24">
           <a class="" href="http://">About Us</a>
           <a class="" href="http://">What We D</a>
           <a class="" href="http://">FAQ</a>
+        </section>
+        <section class="flex-wrap w-24 text-white mr-24">
           <a class="" href="http://">Career</a>
           <a class="" href="http://">Blog</a>
           <a class="" href="http://">Contact Us</a>
+        </section>
+        <section class="flex-grow mr-24">
+          <button class="border-2 rounded-full border-white bg-transparent"><img src="../landing-page/images/simbolo-de-aplicativo-do-facebook.svg" alt="" class=""></button>
+          <button class="border-2 rounded-full border-white"><img src="../landing-page/images/twitter.svg" alt=""></button>
+          <button class="border-2 rounded-full border-white"><img src="../landing-page/images/logotipo-do-instagram.svg" alt=""></button>
         </section>
     </section>
   </section>
